force-app/main/default/objects/eDealer_Dealer_Type_Access__mdt/eDealer_Dealer_Type_Access__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used display Dealer Type (Kenworth or Peterbilt) and Dealers on Gateway Portal</description>
    <label>eDealer Dealer Type Access</label>
    <pluralLabel>eDealer Dealer Type Access</pluralLabel>
</CustomObject>