force-app/main/default/objects/eDealer_Dealer_Type_Access__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Peterbilt</fullName>
            </value>
            <value>
                <fullName>Kenworth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>