force-app/main/default/objects/eDealer_Dealer_Type_Access__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
                <default>true</default>
                <label>System Administrator</label>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>PPD International</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>