force-app/main/default/objects/eDealer_Dealer_Type_Access__mdt/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <label>Role Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Sales Manager- KW</fullName>
            </value>
            <value>
                <fullName>District Parts Manager - District 204</fullName>
            </value>
            <value>
                <fullName>National Sales Manager- PB</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>